deployment/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tarzan
  labels:
    app.kubernetes.io/part-of: tarzan
