deployment/kubernetes/06-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tarzan
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: tarzan
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: tarzan
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
