deployment/kubernetes/08-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: tarzan
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: tarzan
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: tarzan
  ports:
    - name: http
      port: 3000
      targetPort: http
