deployment/kubernetes/10-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: tarzan
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: tarzan
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: tarzan
  ports:
    - name: http
      port: 80
      targetPort: http
